src/css/core.css
/* ... */
/* == Force the use of while 
color to fix some issues == */

.close-wallpaper:hover,
.save-button:hover,
.cancel-fav-btn:hover,
.removebtn:hover,
.setting-button:hover,
.app:hover {
  color: var(--for-white);
}

.closebtn:hover {
  border-color: var(--moreapps-hovering-clr);
}

#fav-link a:hover {
  background-color: var(--favorites-hover);
  transition: var(--transition-speed-default);
}


/* == Make everything use the 
current color var == */

.setting-button,
.app,
.cuteapps,
.removebtn,
.setting-button i,
#fav-link a:hover,
.container {
  color: var(--sat-ids);
}

/* == Some stuff that require the cursor 
to become a pointer == */
.slider,
ul.tabs li,
.app,
#favorite-links:hover,
.close-button,
.close-sounds,
.close-wallpaper,
.new-close-fav {
  cursor: pointer;
}

/* == Setting up everything to 
use the correct border radius == */
.search-bar,
.app,
.tooltiptext,
#content,
#fav-link li,
#fav-link img,
#fav-link a,
#add-link-form,
#add-link-form input,
#new-link-button button,
#add-link-form button,
.settings-background,
.settings-background-warning {
  border-radius: var(--sat-border-radius);
}

.mobile-warning {
  background-color: var(--delete-warning-bg);
  border-radius: 5px;
  visibility: hidden;
  font-weight: 700;
}
/* 
========
+ Mobile optimizations (work in progress..) +
========
*/

@media (max-width: 600px) {
  .favorites_modal_content,
  .sounds-modal-content {
    max-width: 90%;
  }
  .settings-content {
    width: 100% !important;
    height: 100% !important;
  }
  .tab-content {
    width: 86%;
    margin-left: 45px !important;
  }
  .username-section input {
    width: 50%;
  }
  .fav-content {
    width: 23rem !important;
    height: 36rem !important;
  }
  .settings-title {
    font-size: 1.2rem !important;
  }
  .version-text {
    padding: 5px 5px !important;
    color: var(--sat-accent-color1);
    font-weight: 600;
    text-decoration: none !important;
    font-size: 13px !important;
  }
  .apps-category li span {
    display: none;
    font-size: 1.5em !important;
  }
  .apps-category li i {
    font-size: 1.2em !important;
    animation: fadein ease 190ms;
  }
  ul.fav_ptgi_category li {
    font-size: 11px !important;
    display: block !important;
    padding: 10px 10px !important;
    margin-bottom: 5px !important;
  }
  .notification-dot {
    visibility: hidden;
  }
  .settings-nav-separator {
    visibility: hidden;
  }
  /* Settings button */
  .sidebar-trigger {
    font-size: 1.2rem;
    top: 10px;
    right: 10px;
    border-radius: 10px;
  }
}

/* Align button-container to the left to follow standard UI guidelines */

.button-container {
  text-align: right;
  padding: 10px;
}

/* 
========
+ Saturn core components +
+ Settings sidebar +
========
*/


.sidebar {
  width: 100%;
  max-width: 570px;
  height: 100vh;
  background-color: var(--sat-blurry-background);
  position: fixed;
  right: -100%;
  top: 0;
  transition: right 0.3s ease-in-out;
  z-index: 999;
  box-shadow: 0 2px 10px rgba(17, 17, 17, 0.822);
  border-top-left-radius: 15px;
  border-bottom-left-radius: 10px;
  overflow-y: auto;
}

.sidebar.open {
  right: 0;
  backdrop-filter: blur(10px); /* Apply blur when open */
  animation: 0.3 ease-in-out;
}

.sidebar-trigger {
  background: none;
  color: var(--sat-ids);
  font-size: 1.7rem;
  cursor: pointer;
  position: fixed;
  top: 20px;
  right: 20px; /* Adjust the desired position from the right */
  z-index: 1000;
  border-radius: 17px;
}

.settings-tab-item {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.settings-tab-item {
  display: inline-block;
  padding: 10px 20px;
  background-color: var(--sat-setting-bg-effect);
  cursor: pointer;
  font-size: 15px;
  border-radius: 8px;
}

.settings-tab-item.active {
  background-color: var(--bg-accent-color-lr);
  transition: 0.2s ease-in-out;
  border: 1px solid var(--sat-accent-color1);
}

.settings-tab-item:hover {
  background-color: var(--bg-accent-color-lr-hover);
  transition: background-color 0.2s ease-in-out;
}

.setting-content {
  padding: 20px;
}

.tab-pane {
  display: none;
}

.tab-pane.active {
  display: block;
}

/* ========= 
Optimize sidebar for mobile (Beta)
========*/

/* Media queries for mobile optimization */
@media screen and (max-width: 768px) {
  .sidebar {
    max-width: 100%;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    font-size: 13px;
  }
  
  .sidebar-trigger {
    right: 10px;
  }
  
  .settings-tab-item {
    font-size: 14px;
    padding: 8px 16px;
  }

  .settings-tab-item i {
    font-size: 0px;
  }
  
  
  .setting-content {
    padding: 10px;
  }
}

